--- a/html/css/style.css
+++ b/html/css/style.css
@@ -379,3 +379,54 @@ div#y2020_respond_note{
 div#y2020_section {
     display: none;
 }
+
+
+/*Start of login information*/
+div#login_details {
+    display: none;
+}
+
+
+ul#awesomplete_list_5 > li {
+    border-style: solid;
+    font-size: 1em;
+    font-weight: normal;
+}
+
+div#login_key, div#new_company, div#nav_div, p#key_error {
+  display: none
+}
+
+
+span#save_indicator {
+    background-color: green;
+    color: white;
+    display: none;
+  }
+
+
+  button#save_btn {
+    font-weight: 900;
+    font-size: 16px;
+    /* text-transform: uppercase; */
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 3px;
+    background-color: #0280bf;
+    margin-top: 30px;
+}
+
+
+  button#submit_btn {
+    font-weight: 900;
+    font-size: 16px;
+    /* text-transform: uppercase; */
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 3px;
+    background-color: #0280bf;
+    margin-top: 30px;
+    display: none
+}
+
+/*End of login*/
